cmake_minimum_required(VERSION 3.25)
project(Labor4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Labor4 Shop.cpp Fruit.cpp Fruit.h Date.cpp Date.h Day.cpp Day.h ExactDate.cpp ExactDate.h Time.h TestTime.cpp TestTime.h TestDay.cpp TestDay.h TestDate.cpp TestDate.h TestExactDate.cpp TestExactDate.h Domain.h TestDomain.cpp TestDomain.h TestAll.cpp TestAll.h UI.h UserInterface.cpp UserInterface.h Repository.h FruitRepository.cpp FruitRepository.h FruitController.cpp FruitController.h Controller.h TestRepository.cpp TestRepository.h TestController.cpp TestController.h)
